deploy: 3c7fab531cd884ae68fdf31162859ea5d2b15d59

--- a/contact/index.html
+++ b/contact/index.html
@@ -371,7 +371,7 @@
 
 <h3 id="contact-form">Contact form</h3>
 
-<form action="https://formspree.io/f/" method="POST">
+<form action="https://formspree.io/f/xkgnrbva" method="POST">
   <label for="name">Your name:</label>
   <input type="text" name="name" id="name" required="" />
 
