deploy: 07aecb5d5e8ceaa0a11b40a2f7bc2343e00b1fea

--- a/about/index.html
+++ b/about/index.html
@@ -383,7 +383,7 @@
       <td><strong><a href="https://www.python.org"><img src="/assets/images/Python.svg" alt="Python" width="20" height="20" /> Python</a></strong></td>
       <td><strong><a href="https://www.r-project.org"><img src="/assets/images/R.svg" alt="R" width="20" height="2" /> R</a></strong></td>
       <td><strong><a href="https://learn.microsoft.com/en-us/cpp/"><img src="/assets/images/cpp_logo.svg" alt="c_pp" width="20" height="20" /> C++</a></strong></td>
-      <td><strong><a href="https://www.java.com/"><img src="/assets/images/jAVA.svg" alt="Java" width="20" height="20" /> Java</a></strong></td>
+      <td><strong><a href="https://www.java.com/"><img src="/assets/images/Java.svg" alt="Java" width="20" height="20" /> Java</a></strong></td>
     </tr>
     <tr>
       <td><strong><i class="fa-solid fa-database"></i> SQL</strong>:</td>
