--- a/contact/index.html
+++ b/contact/index.html
@@ -384,6 +384,27 @@
   <button type="submit">Send</button>
 </form>
 
+<!-- <form id="contact-form" method="POST">
+  <label for="name">Name:</label>
+  <input type="text" name="name" id="name" required>
+  
+  <label for="email">Email:</label>
+  <input type="email" name="email" id="email" required>
+  
+  <label for="message">Message:</label>
+  <textarea name="message" id="message" required></textarea>
+  
+  <button type="submit">Send</button>
+</form>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const formspreeID = "xkgnrbva"; 
+    const form = document.getElementById("contact-form");
+    form.action = `https://formspree.io/f/${formspreeID}`;
+  });
+</script> -->
+
         
       </section>
 
