deploy: fdff4adc54192aca9650712c0985cb209f22395f

--- a/about/index.html
+++ b/about/index.html
@@ -598,7 +598,9 @@
 
 <h2 id="-featured-projects"><i class="fas fa-project-diagram"></i> Featured Projects</h2>
 
-<p>Here are some of the projects I plan to build and showcase soon. Stay tuned!</p>
+<p>Here are some of the projects I plan to build and showcase soon. 🚧 Work In Progress</p>
+
+<p>Stay tuned!</p>
 
 <div class="feature__wrapper">
 
