deploy: 80616eec501d556da4c28f9787fc4ca44689fe05

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -237,8 +237,9 @@
 
       <section class="page__content" itemprop="text">
         
-        Thanks for reaching out! I’ll get back to you as soon as possible.  
-In the meantime, feel free to connect with me on [LinkedIn](https://www.linkedin.com/in/alexmatiasastorga/).
+        <p>Thanks for reaching out! I’ll get back to you as soon as possible.<br />
+In the meantime, feel free to connect with me on <a href="https://www.linkedin.com/in/alexmatiasastorga/">LinkedIn</a>.</p>
+
         
       </section>
 
