deploy: 5d3ffcb65d023d811c9953d5d4fd322ba097f063

--- a/contact/index.html
+++ b/contact/index.html
@@ -363,7 +363,7 @@
         <!-- {: .text-justify} -->
 <p>Feel free to reach out through <a href="https://linkedin.com/in/alexmatiasastorga">LinkedIn</a> or send me an email at <a href="mailto: alejandromatiasastorga@gmail.com">alejandromatiasastorga@gmail.com</a>. I’m always open to discussing new projects, creative ideas, or opportunities to be part of your vision.</p>
 
-<p><a href="../CV/Manuel Alejandro Matías Astorga CV ENG.pdf" class="btn btn--inverse">Download my CV</a></p>
+<p><a href="../CV/ManuelAlejandroMatiasAstorga-CV.pdf" class="btn btn--inverse">Download my CV</a></p>
 
 <h3 id="contact-form">Contact form</h3>
 
