deploy: f8536266ab9dd2f6c2dae768d0df1cad13d4c25e

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Welcome to My Data Science Portfolio! - Manuel Alejandro Matías Astorga Data Science Portfolio</title>
+<!-- begin _includes/seo.html --><title>Welcome to My Data Science Portfolio! - Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects</title>
 <meta name="description" content="Explore real-world projects and insights in Data Science, Machine Learning, and AI.">
 
 
@@ -20,7 +20,7 @@
 
 <meta property="og:type" content="website">
 <meta property="og:locale" content="en_US">
-<meta property="og:site_name" content="Manuel Alejandro Matías Astorga Data Science Portfolio">
+<meta property="og:site_name" content="Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning & AI Projects">
 <meta property="og:title" content="Welcome to My Data Science Portfolio!">
 <meta property="og:url" content="https://alexmatiasas.github.io/">
 
@@ -483,6 +483,10 @@
   <strong>Note:</strong> These projects are currently under active development. I’m building this portfolio to reflect real, practical experience in Data Science and Machine Learning. Stay tuned for updates!
 </div>
 
+<!-- bundle exec jekyll serve -->
+
+<title>Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects</title>
+
     </section>
   </article>
 </div>
@@ -542,7 +546,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2025 <a href="https://alexmatiasas.github.io">© 2025 Manuel Alejandro Matías Astorga</a>. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2025 <a href="https://alexmatiasas.github.io">Manuel Alejandro Matías Astorga</a>. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
