--- a/page2/index.html
+++ b/page2/index.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Manuel Alejandro Matías Astorga Data Science Portfolio - Page 2</title>
+<!-- begin _includes/seo.html --><title>Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects - Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects - Page 2</title>
 <meta name="description" content="A showcase of my Data Science and Machine Learning projects.">
 
 
@@ -20,8 +20,8 @@
 
 <meta property="og:type" content="website">
 <meta property="og:locale" content="en_US">
-<meta property="og:site_name" content="Manuel Alejandro Matías Astorga Data Science Portfolio">
-<meta property="og:title" content="Manuel Alejandro Matías Astorga Data Science Portfolio">
+<meta property="og:site_name" content="Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning & AI Projects">
+<meta property="og:title" content="Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects">
 <meta property="og:url" content="https://alexmatiasas.github.io/page2/">
 
 
@@ -34,7 +34,7 @@
 
 
   <meta name="twitter:site" content="@alexmatiasas">
-  <meta name="twitter:title" content="Manuel Alejandro Matías Astorga Data Science Portfolio">
+  <meta name="twitter:title" content="Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects">
   <meta name="twitter:description" content="A showcase of my Data Science and Machine Learning projects.">
   <meta name="twitter:url" content="https://alexmatiasas.github.io/page2/">
 
@@ -634,7 +634,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2025 <a href="https://alexmatiasas.github.io">© 2025 Manuel Alejandro Matías Astorga</a>. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2025 <a href="https://alexmatiasas.github.io">Manuel Alejandro Matías Astorga</a>. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
