--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Projects - Manuel Alejandro Matías Astorga Data Science Portfolio</title>
+<!-- begin _includes/seo.html --><title>Projects - Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects</title>
 <meta name="description" content="Explore a collection of my work across various domains in Data Science and Machine Learning, from Natural Language Processing to Real-Time Data Processing.">
 
 
@@ -20,7 +20,7 @@
 
 <meta property="og:type" content="website">
 <meta property="og:locale" content="en_US">
-<meta property="og:site_name" content="Manuel Alejandro Matías Astorga Data Science Portfolio">
+<meta property="og:site_name" content="Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning & AI Projects">
 <meta property="og:title" content="Projects">
 <meta property="og:url" content="https://alexmatiasas.github.io/projects/">
 
@@ -814,7 +814,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2025 <a href="https://alexmatiasas.github.io">© 2025 Manuel Alejandro Matías Astorga</a>. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2025 <a href="https://alexmatiasas.github.io">Manuel Alejandro Matías Astorga</a>. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/jekyll-themes/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
