deploy: 609d3635ea53f660894c597e3520e0debafdfc76

--- a/page2/index.html
+++ b/page2/index.html
@@ -10,7 +10,11 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects - Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects - Page 2</title>
+<!-- begin _includes/seo.html --><title>
+  
+    Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning & AI Projects
+  
+</title>
 <meta name="description" content="A showcase of my Data Science and Machine Learning projects.">
 
 
