--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Welcome to My Data Science Portfolio! - Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects</title>
+<!-- begin _includes/seo.html --><title>
+  
+    Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning & AI Projects
+  
+</title>
 <meta name="description" content="Explore real-world projects and insights in Data Science, Machine Learning, and AI.">
 
 
