--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,11 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Projects - Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects</title>
+<!-- begin _includes/seo.html --><title>
+  
+    Projects-Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning & AI Projects
+  
+</title>
 <meta name="description" content="Explore a collection of my work across various domains in Data Science and Machine Learning, from Natural Language Processing to Real-Time Data Processing.">
 
 
