--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -10,7 +10,11 @@
   <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>Thanks for Your Message! - Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning &amp; AI Projects</title>
+<!-- begin _includes/seo.html --><title>
+  
+    Thanks for Your Message!-Manuel Alejandro Matías Astorga | Data Science Portfolio – Machine Learning & AI Projects
+  
+</title>
 <meta name="description" content="A showcase of my Data Science and Machine Learning projects.">
 
 
